feat: gerenciando os passos de setup de uma escola
